--- a/6.神经网络的层.ipynb
+++ b/6.神经网络的层.ipynb
@@ -41,18 +41,19 @@
      "data": {
       "text/plain": [
        "(Parameter containing:\n",
-       " tensor([[-0.0455,  0.3008,  0.1281,  0.2621,  0.0457,  0.3075, -0.2405,  0.0377,\n",
-       "          -0.1661, -0.2990],\n",
-       "         [-0.2488,  0.2213, -0.3131,  0.1024, -0.2728,  0.2503, -0.2249, -0.0123,\n",
-       "          -0.1601, -0.1512],\n",
-       "         [-0.2920,  0.0107, -0.3029,  0.2823,  0.1365, -0.2969,  0.2674,  0.1127,\n",
-       "          -0.2489,  0.2587],\n",
-       "         [ 0.0882,  0.0691, -0.0028,  0.0456, -0.2048,  0.2760,  0.1824, -0.0427,\n",
-       "          -0.0581,  0.0818],\n",
-       "         [-0.0637,  0.2225, -0.0490,  0.2941,  0.0802,  0.1224,  0.0058,  0.0408,\n",
-       "           0.2100, -0.1777]], requires_grad=True),\n",
+       " tensor([[ 1.6204e-01, -2.0444e-01, -1.2897e-02,  1.6852e-01,  2.9327e-01,\n",
+       "          -1.0507e-01,  8.5197e-02, -8.1483e-02,  1.0794e-01, -1.1018e-01],\n",
+       "         [ 2.7556e-01,  3.5181e-02,  1.7725e-01, -1.5533e-03, -4.9809e-02,\n",
+       "           1.8827e-01, -2.3475e-01,  1.0436e-01,  3.4916e-02, -1.4363e-01],\n",
+       "         [ 1.5250e-01,  3.1006e-01, -1.0069e-01, -3.7223e-02,  2.8846e-01,\n",
+       "           3.1428e-01, -1.3007e-01,  2.4839e-01,  7.2949e-02,  2.2329e-01],\n",
+       "         [ 6.8134e-02, -2.6406e-01,  1.3295e-01, -2.2816e-01,  1.9616e-01,\n",
+       "          -2.9166e-01,  2.7269e-02,  1.4765e-02, -2.2855e-04, -2.2411e-04],\n",
+       "         [ 9.3534e-03, -5.4455e-02, -9.8700e-02, -2.3186e-05, -2.6181e-01,\n",
+       "          -2.8278e-02,  6.2345e-02, -2.1410e-01, -7.6263e-02,  2.3914e-01]],\n",
+       "        requires_grad=True),\n",
        " Parameter containing:\n",
-       " tensor([-0.0460,  0.3107, -0.1693, -0.1184, -0.0231], requires_grad=True))"
+       " tensor([ 0.1452, -0.2504,  0.1929,  0.2126,  0.2083], requires_grad=True))"
       ]
      },
      "execution_count": 3,
@@ -196,9 +197,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.0341, 0.0603, 0.1581, 0.0621, 0.5418, 0.1436],\n",
-      "        [0.1167, 0.1364, 0.2221, 0.1870, 0.2396, 0.0981],\n",
-      "        [0.0561, 0.1891, 0.1158, 0.2129, 0.1480, 0.2782]])\n"
+      "tensor([[0.5016, 0.1687, 0.1253, 0.0173, 0.1146, 0.0726],\n",
+      "        [0.0908, 0.0475, 0.0767, 0.3466, 0.3754, 0.0630],\n",
+      "        [0.3311, 0.1088, 0.0659, 0.0915, 0.1738, 0.2288]])\n"
      ]
     }
    ],
@@ -217,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([1., 1., 1.])"
+       "tensor([1.0000, 1.0000, 1.0000])"
       ]
      },
      "execution_count": 10,
@@ -271,84 +272,84 @@
      "data": {
       "text/plain": [
        "(Parameter containing:\n",
-       " tensor([[[[-0.0218,  0.0320,  0.1615],\n",
-       "           [-0.0820, -0.1020, -0.1386],\n",
-       "           [-0.0526,  0.1307, -0.1749]],\n",
+       " tensor([[[[ 0.1534,  0.1777, -0.1103],\n",
+       "           [ 0.1747,  0.1320, -0.0668],\n",
+       "           [ 0.1125,  0.1222,  0.1434]],\n",
        " \n",
-       "          [[-0.0671, -0.1082,  0.1593],\n",
-       "           [-0.1356, -0.0759,  0.1299],\n",
-       "           [-0.1051,  0.1729,  0.1365]],\n",
+       "          [[ 0.0575,  0.1118, -0.1237],\n",
+       "           [ 0.1854,  0.1912,  0.0103],\n",
+       "           [ 0.0679,  0.0738,  0.1576]],\n",
        " \n",
-       "          [[-0.0749,  0.0309,  0.1770],\n",
-       "           [-0.0815, -0.0419,  0.0655],\n",
-       "           [ 0.0554,  0.1530,  0.0756]]],\n",
-       " \n",
-       " \n",
-       "         [[[-0.1360,  0.0424, -0.0903],\n",
-       "           [-0.1453, -0.1251, -0.1236],\n",
-       "           [ 0.0097, -0.1253, -0.1711]],\n",
-       " \n",
-       "          [[-0.0698,  0.0930, -0.1879],\n",
-       "           [-0.1744, -0.0228,  0.0995],\n",
-       "           [ 0.0508, -0.1039, -0.1312]],\n",
-       " \n",
-       "          [[ 0.1577,  0.1495,  0.1759],\n",
-       "           [ 0.1540,  0.0169,  0.0583],\n",
-       "           [-0.1777,  0.0854,  0.1430]]],\n",
+       "          [[ 0.1380, -0.1378,  0.0348],\n",
+       "           [ 0.0352,  0.0284, -0.0085],\n",
+       "           [-0.0561, -0.1280, -0.0003]]],\n",
        " \n",
        " \n",
-       "         [[[ 0.0044,  0.0039, -0.1510],\n",
-       "           [-0.1274, -0.0105,  0.0777],\n",
-       "           [ 0.0142, -0.1594, -0.1210]],\n",
+       "         [[[ 0.0097,  0.1286, -0.0472],\n",
+       "           [-0.1360,  0.0547,  0.1376],\n",
+       "           [-0.1850, -0.1543,  0.1505]],\n",
        " \n",
-       "          [[-0.0354, -0.1450, -0.0793],\n",
-       "           [-0.1736,  0.1643,  0.0766],\n",
-       "           [-0.0761, -0.1523,  0.1465]],\n",
+       "          [[ 0.1173,  0.1756, -0.1196],\n",
+       "           [-0.0359, -0.0743, -0.1007],\n",
+       "           [-0.0190,  0.0543,  0.1252]],\n",
        " \n",
-       "          [[ 0.1305,  0.0759,  0.0293],\n",
-       "           [ 0.0067, -0.0162,  0.0138],\n",
-       "           [ 0.1237, -0.0307,  0.0109]]],\n",
-       " \n",
-       " \n",
-       "         [[[-0.1497,  0.1597,  0.0135],\n",
-       "           [ 0.1502, -0.0829,  0.1883],\n",
-       "           [ 0.0798, -0.0541, -0.1135]],\n",
-       " \n",
-       "          [[-0.1321,  0.0713, -0.1069],\n",
-       "           [ 0.1654,  0.0521, -0.1231],\n",
-       "           [-0.0891, -0.1641, -0.0534]],\n",
-       " \n",
-       "          [[-0.0919, -0.1408,  0.0438],\n",
-       "           [-0.0049, -0.0692,  0.0151],\n",
-       "           [ 0.0786, -0.0031,  0.0562]]],\n",
+       "          [[ 0.1004, -0.1186,  0.0975],\n",
+       "           [ 0.0920,  0.1349, -0.0147],\n",
+       "           [ 0.1074, -0.0073, -0.0664]]],\n",
        " \n",
        " \n",
-       "         [[[-0.0971, -0.0990, -0.0842],\n",
-       "           [ 0.0859, -0.0165, -0.0973],\n",
-       "           [-0.1839, -0.1624,  0.1289]],\n",
+       "         [[[-0.0838,  0.1028, -0.0808],\n",
+       "           [ 0.1042,  0.0259,  0.1161],\n",
+       "           [ 0.0499, -0.0709, -0.0811]],\n",
        " \n",
-       "          [[ 0.0419,  0.0653, -0.1363],\n",
-       "           [ 0.0496,  0.1417,  0.0564],\n",
-       "           [ 0.0236,  0.0418,  0.0740]],\n",
+       "          [[-0.0486,  0.1491, -0.0394],\n",
+       "           [ 0.0668,  0.1419,  0.1181],\n",
+       "           [-0.1490,  0.1301,  0.0951]],\n",
        " \n",
-       "          [[-0.1404, -0.1111, -0.0645],\n",
-       "           [ 0.1144, -0.0384,  0.0155],\n",
-       "           [-0.0524, -0.1259,  0.0434]]],\n",
+       "          [[-0.1797, -0.1636,  0.0954],\n",
+       "           [ 0.0919,  0.1085,  0.0832],\n",
+       "           [-0.0826, -0.1195, -0.1362]]],\n",
        " \n",
        " \n",
-       "         [[[-0.1037, -0.1267, -0.0924],\n",
-       "           [ 0.0042,  0.1409, -0.1762],\n",
-       "           [-0.1186,  0.1490, -0.1751]],\n",
+       "         [[[-0.1805, -0.0471, -0.0740],\n",
+       "           [-0.0478,  0.0401, -0.1829],\n",
+       "           [ 0.0829,  0.0025,  0.1409]],\n",
        " \n",
-       "          [[-0.0600, -0.0245,  0.0317],\n",
-       "           [-0.0260,  0.1392,  0.0500],\n",
-       "           [-0.0891, -0.0323, -0.0947]],\n",
+       "          [[-0.0768,  0.0043, -0.1860],\n",
+       "           [ 0.0355, -0.1059, -0.1870],\n",
+       "           [-0.1614,  0.0115,  0.1024]],\n",
        " \n",
-       "          [[-0.0120,  0.1696,  0.1682],\n",
-       "           [-0.1596,  0.0919, -0.1729],\n",
-       "           [-0.1484, -0.0991, -0.0469]]]], requires_grad=True),\n",
+       "          [[-0.1575,  0.1761, -0.0397],\n",
+       "           [ 0.1280, -0.0839,  0.0309],\n",
+       "           [ 0.0748, -0.1750,  0.0097]]],\n",
+       " \n",
+       " \n",
+       "         [[[ 0.1778, -0.1494, -0.0943],\n",
+       "           [-0.0589,  0.1714, -0.1534],\n",
+       "           [-0.1252, -0.0973,  0.0036]],\n",
+       " \n",
+       "          [[-0.0954,  0.1802,  0.1549],\n",
+       "           [-0.0187,  0.0417, -0.0036],\n",
+       "           [ 0.1178, -0.1762,  0.1783]],\n",
+       " \n",
+       "          [[ 0.1637, -0.1733,  0.0855],\n",
+       "           [ 0.0357, -0.0371,  0.1837],\n",
+       "           [-0.1611,  0.0507,  0.1268]]],\n",
+       " \n",
+       " \n",
+       "         [[[ 0.0519,  0.1405,  0.1724],\n",
+       "           [-0.0506, -0.0422,  0.1046],\n",
+       "           [-0.1658,  0.0858, -0.1541]],\n",
+       " \n",
+       "          [[ 0.1094,  0.0984, -0.1540],\n",
+       "           [ 0.0777,  0.1042,  0.1323],\n",
+       "           [-0.0895,  0.0940,  0.1432]],\n",
+       " \n",
+       "          [[ 0.1104, -0.0487,  0.1052],\n",
+       "           [ 0.0454, -0.0472,  0.0717],\n",
+       "           [-0.1404,  0.1318, -0.1542]]]], requires_grad=True),\n",
        " Parameter containing:\n",
-       " tensor([ 0.1535, -0.1141,  0.1199, -0.1747,  0.0410,  0.1079],\n",
+       " tensor([ 0.1599, -0.1401,  0.0749,  0.1140, -0.1643, -0.0083],\n",
        "        requires_grad=True))"
       ]
      },
@@ -423,22 +424,22 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[[-1.4521, -0.0928,  1.8533],\n",
-       "          [ 0.3491, -1.3944,  2.1962],\n",
-       "          [-0.6643, -0.3087,  0.2284]],\n",
+       "tensor([[[[-0.8901,  1.4404, -0.1949],\n",
+       "          [-0.9262,  2.0766, -0.0273],\n",
+       "          [ 1.5320,  0.3519,  0.0425]],\n",
        "\n",
-       "         [[ 1.4465, -0.6853,  1.0208],\n",
-       "          [-0.9505,  0.5066,  1.2384],\n",
-       "          [-0.4284,  0.8077, -0.1590]]],\n",
+       "         [[-0.1658,  0.3645, -0.6759],\n",
+       "          [ 0.0734, -1.3039, -0.4407],\n",
+       "          [-2.2038, -0.2539,  0.8688]]],\n",
        "\n",
        "\n",
-       "        [[[ 0.7662, -0.7766, -0.5460],\n",
-       "          [ 0.6284, -0.0870, -0.6088],\n",
-       "          [-1.2213,  0.3833, -0.4907]],\n",
+       "        [[[ 2.1428, -1.0313,  1.2831],\n",
+       "          [ 1.4973, -0.2758,  0.3096],\n",
+       "          [-1.3119, -0.1408,  0.5046]],\n",
        "\n",
-       "         [[ 0.8547,  0.6421, -1.1427],\n",
-       "          [-0.7311,  1.4001,  0.5353],\n",
-       "          [-0.2117,  0.4510,  0.8516]]]])"
+       "         [[ 0.6676,  0.3295, -0.1464],\n",
+       "          [-1.2856, -0.8622, -0.3977],\n",
+       "          [-0.0124, -1.2191, -1.3990]]]])"
       ]
      },
      "execution_count": 15,
@@ -467,18 +468,18 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[[ 0.3491,  2.1962],\n",
-       "          [ 0.3491,  2.1962]],\n",
+       "tensor([[[[ 2.0766,  2.0766],\n",
+       "          [ 2.0766,  2.0766]],\n",
        "\n",
-       "         [[ 1.4465,  1.2384],\n",
-       "          [ 0.8077,  1.2384]]],\n",
+       "         [[ 0.3645,  0.3645],\n",
+       "          [ 0.0734,  0.8688]]],\n",
        "\n",
        "\n",
-       "        [[[ 0.7662, -0.0870],\n",
-       "          [ 0.6284,  0.3833]],\n",
+       "        [[[ 2.1428,  1.2831],\n",
+       "          [ 1.4973,  0.5046]],\n",
        "\n",
-       "         [[ 1.4001,  1.4001],\n",
-       "          [ 1.4001,  1.4001]]]])"
+       "         [[ 0.6676,  0.3295],\n",
+       "          [-0.0124, -0.3977]]]])"
       ]
      },
      "execution_count": 16,
@@ -494,6 +495,49 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4c9765dd",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### 自适应平均池化层"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "327ee5d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 通过指定输出数据的 H * W，内部会自动计算出合适的池化窗口大小和步幅\n",
+    "global_avg_pool = torch.nn.AdaptiveAvgPool2d((1, 1))\n",
+    "\n",
+    "# 池化过程跟普通池化一样"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae0ae08f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 2, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(2, 2, 2, 2)\n",
+    "output = global_avg_pool(x)   # 池化不改变样本数和通道数\n",
+    "print(output.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edd4dbaf",
    "metadata": {},
    "source": [
@@ -504,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "c5c06ec3",
    "metadata": {},
    "outputs": [],
@@ -570,7 +614,9 @@
    "id": "116c489a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "torch.nn.BatchNorm1d"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -592,7 +638,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.7880)\n"
+      "tensor(1.1662)\n"
      ]
     }
    ],
