--- a/15.RNN.ipynb
+++ b/15.RNN.ipynb
@@ -5,7 +5,29 @@
    "id": "2c0d25ba",
    "metadata": {},
    "source": [
-    "### RNN模型纵览"
+    "### RNN模型总览\n",
+    "\n",
+    "RNN 是一种循环神经网络，用于序列模型的预测\n",
+    "\n",
+    "在 RNN 中，使用一种叫做潜变量的东西来存储历史序列信息\n",
+    "\n",
+    "在将历史信息都录入到潜变量中后，再通过潜变量预测后面一个 token\n",
+    "\n",
+    "得到的输出是预测的 token 是词表中任何一个 token 的概率（softmax 后）\n",
+    "\n",
+    "![](md-img/rnn-model.jpg)\n",
+    "\n",
+    "上图中 H 表示潜变量（保存历史状态），没有下标的原因是不需要保存每一个历史状态，直接对潜变量进行更新即可\n",
+    "\n",
+    "图中每一个箭头表示一个全连接，其中使用 H 和 一个 token 来更新 H 使用的两个全连接可以使用一个偏置即可\n",
+    "\n",
+    "通常使用 H 和新的 token 对 H 进行更新时，得到的是对新的 H 的打分，还可以添加激活函数，上图中省略了\n",
+    "\n",
+    "每一个 token 的输入大小为 vocab_size（即使用独热编码来表示 token）\n",
+    "\n",
+    "每一个预测 token 的输出大小也是 vocab_size，表示对该 token 是词表中任何一个词的打分\n",
+    "\n",
+    "得分输出经过一个 softmax 层即可得到是词表中任何一个词的概率"
    ]
   },
   {
@@ -15,7 +37,13 @@
    "source": [
     "<br>\n",
     "\n",
-    "### 训练中的输出"
+    "### 训练中的输出\n",
+    "\n",
+    "训练使用的样本的序列长度为指定的时间步长\n",
+    "\n",
+    "预测的输出是相对于样本向后偏移一个序列号的序列\n",
+    "\n",
+    "也就是说每次对潜变量进行一次更新，都会用当前的潜变量进行一次 token 的预测"
    ]
   },
   {
@@ -25,7 +53,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "### 损失函数"
+    "### 损失函数\n",
+    "\n",
+    "损失函数采用困惑度 (perplexity) 来表示，困惑度其实就是 exp(crossEntropyLoss)"
    ]
   },
   {
@@ -35,7 +65,13 @@
    "source": [
     "<br>\n",
     "\n",
-    "### 梯度裁剪"
+    "### 梯度裁剪\n",
+    "\n",
+    "在 RNN 中，梯度的反向传播需要进行很多次的矩阵计算，这样可能会导致矩阵爆炸（元素值过大）\n",
+    "\n",
+    "梯度裁剪就是对最终得到的梯度进行比例缩放\n",
+    "\n",
+    "计算梯度整体的 L2 范数，若其大于阈值 theta，则将所有的梯度乘 (theta / L2)"
    ]
   },
   {
@@ -45,7 +81,13 @@
    "source": [
     "<br>\n",
     "\n",
-    "### 潜变量初始化"
+    "### 潜变量初始化\n",
+    "\n",
+    "在没有历史信息的时候，潜变量可以全部初始化为 0\n",
+    "\n",
+    "不同样本对应的序列不连续的话，这些样本的潜变量就不一样，需要为这些样本分配不同的潜变量\n",
+    "\n",
+    "潜变量的形状可以视为 (batch_size, hiden_size)，其中 hiden_size 可以自定义"
    ]
   },
   {
@@ -55,7 +97,15 @@
    "source": [
     "<br>\n",
     "\n",
-    "### 使用模型进行预测"
+    "### 使用模型进行预测\n",
+    "\n",
+    "使用 RNN 模型进行预测的任务一般是通过给定 prefix，预测后面可能出现的一系列 token\n",
+    "\n",
+    "prefix 就是前面的 token 序列\n",
+    "\n",
+    "在进行预测时，需要将 prefix 中的 token 序列信息录入到潜变量中，这个操作叫做模型的预热\n",
+    "\n",
+    "然后在用潜变量进行预测输出，并利用输出继续更新潜变量。循环这个操作，理论上可以无限往后面进行预测。"
    ]
   },
   {
@@ -65,7 +115,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "### 代码实现"
+    "### 代码从零实现"
    ]
   },
   {
@@ -150,12 +200,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "bdfc6baf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 损失函数的计算\n",
+    "# 损失函数的计算，使用困惑度 (perplexity) 来衡量损失\n",
     "# y_hat 和 y 的形状都是 (time_step, batch_size, vocab_size)\n",
     "# 每个样本在不同的时间步长上都有输出（vocab_size 个得分）\n",
     "def loss_func(y_hat, y):\n",
@@ -163,7 +213,7 @@
     "    # 方便计算 softmax 和 crossEntropyLoss\n",
     "    y1 = torch.cat(y_hat, dim=0)\n",
     "    y2 = torch.cat(y, dim=0)\n",
-    "    return torch.nn.CrossEntropyLoss(y1, y2)"
+    "    return torch.exp(torch.nn.CrossEntropyLoss(y1, y2))"
    ]
   },
   {
@@ -189,6 +239,32 @@
    "metadata": {},
    "source": [
     "然后使用不同的batch循环调用上面的训练即可"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad32f66f",
+   "metadata": {},
+   "source": [
+    "更新门（Update Gate）：\n",
+    "$$\n",
+    "z_t = \\sigma(W_z x_t + U_z h_{t-1} + b_z)\n",
+    "$$\n",
+    "\n",
+    "重置门（Reset Gate）：\n",
+    "$$\n",
+    "r_t = \\sigma(W_r x_t + U_r h_{t-1} + b_r)\n",
+    "$$\n",
+    "\n",
+    "候选隐藏状态（Candidate Hidden State）：\n",
+    "$$\n",
+    "\\tilde{h}_t = \\tanh(W_h x_t + U_h (r_t \\odot h_{t-1}) + b_h)\n",
+    "$$\n",
+    "\n",
+    "最终隐藏状态（New Hidden State）：\n",
+    "$$\n",
+    "h_t = (1 - z_t) \\odot h_{t-1} + z_t \\odot \\tilde{h}_t\n",
+    "$$\n"
    ]
   }
  ],
