--- a/14.语言模型数据预处理.ipynb
+++ b/14.语言模型数据预处理.ipynb
@@ -52,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "id": "c8c3bee7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('article.txt', 'r', encoding='utf-8') as f:\n",
+    "with open('dataset/article.txt', 'r', encoding='utf-8') as f:\n",
     "    lines = f.readlines()"
    ]
   },
