--- a/20.循环神经网络简洁实现.ipynb
+++ b/20.循环神经网络简洁实现.ipynb
@@ -1,11 +1,114 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ffc488ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn\n",
+    "import torch"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d56d73d8",
    "metadata": {},
    "source": [
     "### 普通RNN (Recurrent Neural Network)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1b53724",
+   "metadata": {},
+   "source": [
+    "创建 RNN 对应的 nn.Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "946e70aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 10    # 词表大小\n",
+    "hiden_size = 20    # 隐藏状态大小\n",
+    "num_layer = 2      # 隐藏层个数\n",
+    "rnn = nn.RNN(vocab_size, hiden_size, num_layer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc0e9b53",
+   "metadata": {},
+   "source": [
+    "构造输入数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c544ee4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([30, 5, 10])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 输入数据的形状必须是 (seq_len, batch_size, vocab_size)\n",
+    "batch_size = 5\n",
+    "seq_len = 30\n",
+    "x = torch.randn(seq_len, batch_size, vocab_size)\n",
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e19b5fa8",
+   "metadata": {},
+   "source": [
+    "获取输出，注意此处的输出并不是预测结果，而是最后一层隐藏状态的输出\n",
+    "\n",
+    "可以理解为离预测结果还差一个全连接层"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adcb1f38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([30, 5, 20]), torch.Size([2, 5, 20]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "RNN 的输出有两个部分\n",
+    "output 是 RNN 中最后一个隐藏层中每一次更新得到的隐藏状态 (seq_len, batch_size, hiden_size)\n",
+    "state 是 RNN 中最后一次更新隐藏状态得到的各个隐藏层的隐藏状态 (num_layer, batch_size, hiden_size)\n",
+    "'''\n",
+    "\n",
+    "output, state = rnn(x)\n",
+    "output.shape, state.shape"
    ]
   },
   {
@@ -20,6 +123,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccecc219",
+   "metadata": {},
+   "source": [
+    "使用方法与上面类似"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "56ea449d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([30, 5, 20]), torch.Size([2, 5, 20]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gru = nn.GRU(vocab_size, hiden_size, num_layer)\n",
+    "output, state = gru(x)\n",
+    "output.shape, state.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a0ddd6a8",
    "metadata": {},
    "source": [
@@ -27,11 +161,62 @@
     "\n",
     "### LSTM (Long Short-Term Memory)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "16d561fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([30, 5, 20]), torch.Size([2, 5, 20]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lstm = nn.LSTM(vocab_size, hiden_size, num_layer)\n",
+    "output, state = gru(x)\n",
+    "output.shape, state.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "522897ba",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### 总结\n",
+    "\n",
+    "其实传统 RNN、GRU 以及 LSTM 之间的区别主要就是对隐藏状态的更新方式不一样\n",
+    "\n",
+    "但输入输出都是一样的东西"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
