--- a/21.编码器-解码器架构.ipynb
+++ b/21.编码器-解码器架构.ipynb
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3cfc0b7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Encoder(nn.Module):\n",
-    "    def __init__(self, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
     "\n",
     "        # 设计 Encoder 的内部结构，用于提取数据特征，获取中间状态\n",
     "\n",
