--- a/17.LSTM.ipynb
+++ b/17.LSTM.ipynb
@@ -69,11 +69,92 @@
     "其中 C 和 H 都是潜变量，且 H、F、I、O、C、\\tilde{C} 的形状一致\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "735d7085",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### 代码从零实现"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f24fcf86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "\n",
+    "class LSTMModel:\n",
+    "    # 保存模型参数\n",
+    "    def __init__(self, vocab_size, hiden_size):\n",
+    "        self.vocab_size = vocab_size\n",
+    "        self.hiden_size = hiden_size\n",
+    "\n",
+    "        self.w_hf = torch.randn(hiden_size, hiden_size) * 0.01\n",
+    "        self.w_xf = torch.randn(vocab_size, hiden_size) * 0.01\n",
+    "        self.b_f = torch.zeros(hiden_size)\n",
+    "        self.w_hi = torch.randn(hiden_size, hiden_size) * 0.01\n",
+    "        self.w_xi = torch.randn(vocab_size, hiden_size) * 0.01\n",
+    "        self.b_i = torch.zeros(hiden_size)\n",
+    "        self.w_ho = torch.randn(hiden_size, hiden_size) * 0.01\n",
+    "        self.w_xo = torch.randn(vocab_size, hiden_size) * 0.01\n",
+    "        self.b_o = torch.zeros(hiden_size)\n",
+    "        self.w_hc = torch.randn(hiden_size, hiden_size) * 0.01\n",
+    "        self.w_xc = torch.randn(vocab_size, hiden_size) * 0.01\n",
+    "        self.b_c = torch.zeros(hiden_size)\n",
+    "        self.w_hy = torch.randn(hiden_size, vocab_size) * 0.01\n",
+    "        self.b_y = torch.zeros(vocab_size)\n",
+    "\n",
+    "        self.parameters = [self.w_hf, self.w_xf, self.b_f,\n",
+    "                           self.w_hi, self.w_xi, self.b_i,\n",
+    "                           self.w_ho, self.w_xo, self.b_o,\n",
+    "                           self.w_hc, self.w_xc, self.b_c,\n",
+    "                           self.w_hy, self.b_y]\n",
+    "        \n",
+    "        for param in self.parameters:\n",
+    "            param.requires_grad_(True)\n",
+    "\n",
+    "    # 正向传播\n",
+    "    # 输入数据形状为 (time_step, batch_size, vocab_size)\n",
+    "    def forward(self, X):\n",
+    "        h = torch.zeros(X.shape[1], self.hiden_size)    # 初始化隐藏状态\n",
+    "        c = torch.zeros(X.shape[1], self.hiden_size)    # 初始化记忆细胞\n",
+    "\n",
+    "        Y = []   # 用于保存所有的预测输出\n",
+    "\n",
+    "        # 按找时间步长，往后推算每一个样本的潜变量（隐藏状态、记忆细胞）\n",
+    "        for x in X:\n",
+    "            f = torch.sigmoid(h @ self.w_hf + x @ self.w_xf + self.b_f)    # 遗忘门\n",
+    "            i = torch.sigmoid(h @ self.w_hi + x @ self.w_xi + self.b_i)    # 输入门\n",
+    "            o = torch.sigmoid(h @ self.w_ho + x @ self.w_xo + self.b_o)    # 输出门\n",
+    "            c_ = torch.tanh(h @ self.w_hc + x @ self.w_xc + self.b_c)   # 候选记忆细胞\n",
+    "\n",
+    "            c = f * c + i * c_       # 更新记忆细胞\n",
+    "            h = o * torch.tanh(c)    # 更新隐藏状态\n",
+    "\n",
+    "            # 使用隐藏状态获取最终输出\n",
+    "            output = h @ self.w_hy + self.b_y\n",
+    "            Y.append(output)\n",
+    "        \n",
+    "        # 此处返回的 Y 的形状为 (time_step * batch_size, vocab_size)，方便计算损失函数\n",
+    "        return torch.cat(Y, dim=0), (h, c)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
