--- a/20.循环神经网络简洁实现.ipynb
+++ b/20.循环神经网络简洁实现.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ffc488ef",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "946e70aa",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c544ee4a",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "torch.Size([30, 5, 10])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "adcb1f38",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "(torch.Size([30, 5, 20]), torch.Size([2, 5, 20]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "56ea449d",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "(torch.Size([30, 5, 20]), torch.Size([2, 5, 20]))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,25 +164,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "16d561fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([30, 5, 20]), torch.Size([2, 5, 20]))"
+       "(torch.Size([30, 5, 20]), torch.Size([2, 5, 20]), torch.Size([2, 5, 20]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lstm = nn.LSTM(vocab_size, hiden_size, num_layer)\n",
-    "output, state = gru(x)\n",
-    "output.shape, state.shape"
+    "output, state = lstm(x)\n",
+    "output.shape, state[0].shape, state[1].shape\n",
+    "# state 中的第一个表示最后一个时间步，每一个样本的隐藏状态\n",
+    "# state 中的第二个表示最后一个时间步，每一个样本的记忆细胞"
    ]
   },
   {
@@ -216,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
