--- a/22.机器翻译数据集处理.ipynb
+++ b/22.机器翻译数据集处理.ipynb
@@ -5,16 +5,44 @@
    "id": "7e33b925",
    "metadata": {},
    "source": [
-    "### 机器翻译介绍"
+    "### 机器翻译介绍\n",
+    "\n",
+    "机器翻译任务就是将一个语言翻译成另一个语言，比如将一句英语翻译成法语\n",
+    "\n",
+    "机器翻译是典型的 seq to seq 任务，即用一个序列来输出另一个序列\n",
+    "\n",
+    "其数据集的数据部分和标签部分都是序列（比如：数据部分是英语句子，标签部分是对应的法语句子）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f026417c",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### 模拟数据"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "8aca7415",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import numpy as np\n",
+    "\n",
+    "data = [['go .', 'va !'], \n",
+    "        ['hi .', 'salut !'],\n",
+    "        ['run !', 'cours !'],\n",
+    "        ['run !', 'courez !'],\n",
+    "        ['who ?', 'qui ?'],\n",
+    "        ['wow !', 'ça alors !']]\n",
+    "\n",
+    "data = np.array(data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -27,12 +55,147 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28cea209",
+   "metadata": {},
+   "source": [
+    "分离数据部分与标签部分"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "23fcb849",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = data[:, 0]    # 英语\n",
+    "Y = data[:, 1]    # 法语"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2638591c",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "分别对数据部分和标签部分进行词元化（此处我们将每一个单词视作一个词元，每一个标点也是一个词元）\n",
+    "\n",
+    "词元化相当于将一句话分割成由词元组成的序列，那么每一句话都将使用一个列表来表示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "964341d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_ = []\n",
+    "for x in X:\n",
+    "    X_.append(x.split())\n",
+    "\n",
+    "Y_ = []\n",
+    "for y in Y:\n",
+    "    Y_.append(y.split())\n",
+    "\n",
+    "X = X_\n",
+    "Y = Y_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8f743d2",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "分别为数据部分和标签部分建立词表（词元与数值的映射）\n",
+    "\n",
+    "词表中需要添加一下四个词元：\n",
+    "\n",
+    "- '\\<bos>' ==> 表示序列的开始\n",
+    "\n",
+    "- '\\<eos>' ==> 表示序列的结束\n",
+    "\n",
+    "- '\\<pad>' ==> 表示序列的填充\n",
+    "\n",
+    "- '\\<unk>' ==> 表示未知词元\n",
+    "\n",
+    "`构建词表的操作参考 14.语言模型数据预处理 ，此处不进行代码实现`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "ec826e16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 数据部分的词表（英语词表）\n",
+    "token_to_idx1 = {}\n",
+    "idx_to_token1 = {}\n",
+    "\n",
+    "# 标签部分的词表（法语词表）\n",
+    "token_to_idx2 = {}\n",
+    "idx_to_token2 = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2521f3bf",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "依据词表，将数据部分和标签部分分别映射为数值数组（非独热编码形式）\n",
+    "\n",
+    "同时依据指定的 seq_len 对序列进行填充和截断，填充使用 '\\<pad>' 词元\n",
+    "\n",
+    "并记录每一个序列的有效长度（填充长度不算有效长度）\n",
+    "\n",
+    "对于不在词表中的值，统一使用 0 来表示 ('\\<unk>')\n",
+    "\n",
+    "'\\<bos>' 和 '\\<eos>' 在数据预处理时不需要添加，针对不同的训练会有不同的添加方式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "0b3d8125",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_tensor(data, token_to_idx, seq_len):\n",
+    "    output = []\n",
+    "    for line in data:\n",
+    "        # 长度不够进行填充\n",
+    "        if len(line) < seq_len:\n",
+    "            line = list(line) + ['<pad>'] * (seq_len - len(line))\n",
+    "\n",
+    "        # 长度过长，直接截断（不考虑）\n",
+    "        l = []\n",
+    "        for i in range(seq_len):\n",
+    "            l.append(token_to_idx.get(line[i], 0))\n",
+    "        output.append(l)\n",
+    "    return torch.tensor(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "1620f348",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 数据部分和标签部分的序列长度可以不一样\n",
+    "seq_len1 = 5\n",
+    "seq_len2 = 6\n",
+    "\n",
+    "X = build_tensor(X, token_to_idx1, seq_len1)\n",
+    "Y = build_tensor(Y, token_to_idx2, seq_len2)"
+   ]
   }
  ],
  "metadata": {
@@ -42,7 +205,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.18"
   }
  },
