--- a/26.注意力机制.ipynb
+++ b/26.注意力机制.ipynb
@@ -90,12 +90,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eddbc8b9",
+   "metadata": {},
+   "source": [
+    "每一个输入的样本有 num_pair 个键值对（上下文环境）\n",
+    "\n",
+    "可以在每一个样本上进行 num_query 次查询（输出）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54ae48cc",
    "metadata": {},
    "source": [
     "<br>\n",
     "\n",
-    "### 含参注意力"
+    "### 含参注意力（简单情况下）"
    ]
   },
   {
@@ -107,11 +117,255 @@
     "\n",
     "最终得到每一个查询的输出所对应的每一个 value 的权重"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fa9735c",
+   "metadata": {},
+   "source": [
+    "从最简单的情况来考虑，在一个样本上进行一次查询（一个输出），图解如下：\n",
+    "\n",
+    "- Q --> 在一个样本上的一次查询\n",
+    "\n",
+    "- (Ki, Vi) --> 一个样本的键值对（表示这样本的特征）\n",
+    "\n",
+    "K、Q、V 向量的维度可能各不相同\n",
+    "\n",
+    "![](md-img\\加性注意力机制.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a62ce07f",
+   "metadata": {},
+   "source": [
+    "上面的箭头表示全连接，且是没有偏置的全连接\n",
+    "\n",
+    "在通过查询与每一个键之间的相关性得到注意力分数后，通过一层 softmax，即可得到注意力权重\n",
+    "\n",
+    "最终的输出就是键值对中的值与注意力权重的线性组合：\n",
+    "\n",
+    "```python\n",
+    "output = W1 * V1 + W2 * V2 + ··· + Wn * Vn\n",
+    "```\n",
+    "\n",
+    "其中 W 是标量，V 是向量，最终的输出结果是与 V 同样维度的向量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8451e51b",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### 含参注意力（复杂情况下）\n",
+    "\n",
+    "当在多个样本上，分别进行多次查询时，就是比较复杂的情况\n",
+    "\n",
+    "此时各个矩阵形状如下：\n",
+    "\n",
+    "- Q --> (batch_size, num_query, query_size)\n",
+    "\n",
+    "- K --> (batch_size, num_pair, key_size)\n",
+    "\n",
+    "- V --> (batch_size, num_pair, value_size)\n",
+    "\n",
+    "此处 K、V 无需下标，足以表示每一个样本的所有键值对\n",
+    "\n",
+    "底层处理原理就是简单情况下的处理，现在考虑怎么将其转化成矩阵计算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f72cf853",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2b09a0f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q 的形状为 torch.Size([30, 10, 20])\n",
+      "K 的形状为 torch.Size([30, 15, 8])\n",
+      "V 的形状为 torch.Size([30, 15, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 30\n",
+    "num_query = 10\n",
+    "query_size = 20\n",
+    "num_pair = 15\n",
+    "key_size = 8\n",
+    "value_size = 5\n",
+    "\n",
+    "Q = torch.randn(batch_size, num_query, query_size)\n",
+    "K = torch.randn(batch_size, num_pair, key_size)\n",
+    "V = torch.randn(batch_size, num_pair, value_size)\n",
+    "print('Q 的形状为 {}'.format(Q.shape))\n",
+    "print('K 的形状为 {}'.format(K.shape))\n",
+    "print('V 的形状为 {}'.format(V.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7cdaa284",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q_ 的形状为 torch.Size([30, 10, 40])\n",
+      "K_ 的形状为 torch.Size([30, 15, 40])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 将 Q 和 K 映射到同一个向量维度\n",
+    "hiden_size = 40\n",
+    "linear_q = nn.Linear(query_size, hiden_size, bias=False)\n",
+    "linear_k = nn.Linear(key_size, hiden_size, bias=False)\n",
+    "\n",
+    "Q_ = linear_q(Q)\n",
+    "K_ = linear_k(K)\n",
+    "\n",
+    "print('Q_ 的形状为 {}'.format(Q_.shape))\n",
+    "print('K_ 的形状为 {}'.format(K_.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7055a821",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q_ 的形状为 torch.Size([30, 10, 1, 40])\n",
+      "K_ 的形状为 torch.Size([30, 1, 15, 40])\n",
+      "H 的形状为 torch.Size([30, 10, 15, 40])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 每一个查询要与对应样本的每一个键做向量加法\n",
+    "# 希望得到的隐藏层结果形状为 (batch_size, num_query, num_pair, hiden_size)\n",
+    "# 需要为 Q_ 和 K_ 增加一个维度，并通过广播机制实现向量加法\n",
+    "\n",
+    "Q_ = Q_[:, :, None, :]     # 在目标位置增加一个 num_pair 维度\n",
+    "K_ = K_[:, None, :, :]     # 在目标位置增加一个 num_query 维度\n",
+    "\n",
+    "print('Q_ 的形状为 {}'.format(Q_.shape))\n",
+    "print('K_ 的形状为 {}'.format(K_.shape))\n",
+    "\n",
+    "H = torch.tanh(Q_ + K_)\n",
+    "print('H 的形状为 {}'.format(H.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9f468a54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S 的形状为 torch.Size([30, 10, 15, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 将表示每一个查询与每一个键的相关性的向量全连接为一个标量\n",
+    "# 即计算注意力分数\n",
+    "linear_s = nn.Linear(hiden_size, 1, bias=False)\n",
+    "S = linear_s(H)\n",
+    "print('S 的形状为 {}'.format(S.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3000195b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W 的形状为 torch.Size([30, 10, 15])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 调整注意力分数矩阵的形状\n",
+    "# 并对每一行应用 softmax\n",
+    "S = S.reshape(batch_size * num_query, num_pair)\n",
+    "softmax = nn.Softmax(dim=1)\n",
+    "W = softmax(S)\n",
+    "\n",
+    "# 还原形状\n",
+    "W = W.reshape(batch_size, num_query, num_pair)\n",
+    "print('W 的形状为 {}'.format(W.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b2fc1df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output 的形状为 torch.Size([30, 10, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 根据注意力权重和键值对中的值获取最终的输出\n",
+    "# 按照每一个样本分别做矩阵乘法即可\n",
+    "# torch.bmm 就是按照批次，对应的进行矩阵计算\n",
+    "output = torch.bmm(W, V)\n",
+    "print('output 的形状为 {}'.format(output.shape))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
