--- a/18.深度循环神经网络.ipynb
+++ b/18.深度循环神经网络.ipynb
@@ -20,8 +20,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
