--- a/27.注意力机制.ipynb
+++ b/27.注意力机制.ipynb
@@ -131,7 +131,7 @@
     "\n",
     "K、Q、V 向量的维度可能各不相同\n",
     "\n",
-    "![](md-img\\加性注意力机制.jpg)"
+    "![](md-img/加性注意力机制.jpg)"
    ]
   },
   {
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
