--- a/27.注意力机制.ipynb
+++ b/27.注意力机制.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "f72cf853",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "id": "2b09a0f5",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "id": "7cdaa284",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "id": "7055a821",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "id": "9f468a54",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "S 的形状为 torch.Size([30, 10, 15, 1])\n"
+      "S 的形状为 torch.Size([30, 10, 15])\n"
      ]
     }
    ],
@@ -296,13 +296,13 @@
     "# 将表示每一个查询与每一个键的相关性的向量全连接为一个标量\n",
     "# 即计算注意力分数\n",
     "linear_s = nn.Linear(hiden_size, 1, bias=False)\n",
-    "S = linear_s(H)\n",
+    "S = linear_s(H).reshape(batch_size, num_query, num_pair)\n",
     "print('S 的形状为 {}'.format(S.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "id": "3000195b",
    "metadata": {},
    "outputs": [
@@ -317,18 +317,14 @@
    "source": [
     "# 调整注意力分数矩阵的形状\n",
     "# 并对每一行应用 softmax\n",
-    "S = S.reshape(batch_size * num_query, num_pair)\n",
-    "softmax = nn.Softmax(dim=1)\n",
+    "softmax = nn.Softmax(dim=2)\n",
     "W = softmax(S)\n",
-    "\n",
-    "# 还原形状\n",
-    "W = W.reshape(batch_size, num_query, num_pair)\n",
     "print('W 的形状为 {}'.format(W.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9b2fc1df",
    "metadata": {},
    "outputs": [
@@ -346,6 +342,44 @@
     "# torch.bmm 就是按照批次，对应的进行矩阵计算\n",
     "output = torch.bmm(W, V)\n",
     "print('output 的形状为 {}'.format(output.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b01fa7eb",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### 整合上述代码"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "aead0020",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AdditiveAttention(nn.Module):\n",
+    "    def __init__(self, query_size, key_size, hiden_size):\n",
+    "        super().__init__()\n",
+    "        self.linear_q = nn.Linear(query_size, hiden_size, bias=False)\n",
+    "        self.linear_k = nn.Linear(key_size, hiden_size, bias=False)\n",
+    "        self.dense = nn.Linear(hiden_size, 1, bias=False)\n",
+    "        self.softmax = nn.Softmax(dim=2)\n",
+    "\n",
+    "    # query 形状：(batch_size, num_query, query_size)\n",
+    "    # key 形状：(batch_size, num_pair, key_size)\n",
+    "    # value 形状：(batch_size, num_pair, value_size)\n",
+    "    def forward(self, query, key, value):\n",
+    "        query_ = self.linear_q(query)   # (batch_size, num_query, hiden_size)\n",
+    "        key_ = self.linear_k(key)       # (batch_size, num_pair, hiden_size)\n",
+    "        H = torch.tanh(query_[:, :, None, :] + key_[:, None, :, :])      # (batch_size, num_query, num_pair, hiden_size)\n",
+    "        score = self.dense(H).reshape(batch_size, num_query, num_pair)   # (batch_size, num_query, num_pair)\n",
+    "        weight = self.softmax(score)          # (batch_size, num_query, num_pair)\n",
+    "        output = torch.bmm(weight, value)     # (batch_size, num_query, value_size)\n",
+    "        return output"
    ]
   }
  ],
@@ -365,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
